--- a/src/styles.css
+++ b/src/styles.css
@@ -1,34 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
-
-* {
-  padding: 0px;
-  margin: 0px;
-  box-sizing: border-box;
-  list-style: none;
-  font-family: "Roboto", Helvetica, sans-serif;
-}
-
-img {
-  max-width: 100%;
-}
-
-body {
-  height: 100%;
-  width: 100%;
-  background-color: rgb(218, 218, 197);
-}
-
-.main_container {
+.main {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-flow: column wrap;
   width: 100%;
   height: 100%;
-  padding: 10px;
+  padding: 1rem;
 }
 
-.principal_section_container {
+.section {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -37,108 +17,108 @@ body {
   height: 100%;
 }
 
-.header_container {
+.header {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-flow: column wrap;
   width: 100%;
   height: 100%;
-  margin: 20px 0 20px 0;
+  margin: 2rem 0 2rem 0;
 }
 
-.header_container h1 {
-  font-size: 30px;
+.header h1 {
+  font-size: 3rem;
 }
 
-.header_container p {
-  font-size: 20px;
-  margin: 10px 0 0 0;
+.header p {
+  font-size: 2rem;
+  margin: 1rem 0 0 0;
 }
 
-.tabs_container {
+.tabs {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  column-gap: 10px;
-  row-gap: 10px;
+  column-gap: 1rem;
+  row-gap: 1rem;
   width: 100%;
   height: 100%;
   align-items: center;
   justify-items: center;
 }
 
-.tabs_container img {
+.tabs img {
   width: 100%;
-  height: 300px;
-  border-radius: 5px;
+  height: 30rem;
+  border-radius: 0.5rem;
   object-fit: cover;
 }
 
-.tabs_container_text {
+.tabs__list {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-flow: column wrap;
   width: 100%;
   height: 100%;
-  border: 2px solid #fff;
-  border-radius: 5px;
+  border: 0.2rem solid var(--white-color);
+  border-radius: 0.5rem;
 }
 
-.tabs_container_text_buttons {
+.tabs__list__btns {
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-flow: row wrap;
   width: 100%;
   height: auto;
-  border-bottom: 2px solid #fff;
-  padding: 2px;
+  border-bottom: 0.2rem solid var(--white-color);
+  padding: 0.2rem;
 }
 
-.tabs_container_text_buttons_button {
-  background-color: #ccc;
-  font-size: 15px;
+.tabs__list__btns__btn {
+  background-color: var(--secondary-color);
+  font-size: 1.5rem;
   border: none;
   width: 33%;
   height: auto;
-  padding: 5px;
+  padding: 0.5rem;
   cursor: pointer;
 }
 
-.isActive {
-  background-color: #fff;
+.tabs__list__btns__btn--active {
+  background-color: var(--white-color);
 }
 
-.tabs_container_text p {
-  background-color: #ccc;
-  font-size: 20px;
-  padding: 5px;
+.tabs__list p {
+  background-color: var(--secondary-color);
+  font-size: 2rem;
+  padding: 0.5rem;
   text-align: justify;
 }
 
 @media only screen and (min-width: 768px) {
-  .tabs_container {
-    width: 600px;
+  .tabs {
+    width: 60rem;
   }
 }
 
 @media only screen and (min-width: 1024px) {
-  .tabs_container {
+  .tabs {
     grid-template-columns: repeat(2, 1fr);
-    width: 800px;
-    margin-top: 20px;
+    width: 80rem;
+    margin-top: 2rem;
   }
 
-  .tabs_container_text_buttons {
+  .tabs__list__btns {
     height: 15%;
   }
 
-  .tabs_container_text_buttons button {
+  .tabs__list__btns button {
     height: 100%;
   }
 
-  .tabs_container p {
+  .tabs p {
     height: 85%;
   }
 }
