--- a/src/pages/TabsPage/TabsPage.css
+++ b/src/pages/TabsPage/TabsPage.css
@@ -1,4 +1,4 @@
-.main-app {
+.tabs-page {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -47,13 +47,6 @@
   justify-items: center;
 }
 
-.tabs__img {
-  width: 100%;
-  height: 30rem;
-  border-radius: 0.5rem;
-  object-fit: cover;
-}
-
 .tabs-wrapper {
   display: flex;
   align-items: center;
@@ -65,7 +58,7 @@
   border-radius: 0.5rem;
 }
 
-.tabs-wrapper__list {
+.tabs__list {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -76,21 +69,7 @@
   padding: 0.2rem;
 }
 
-.tabs-wrapper__tab {
-  background-color: var(--secondary-color);
-  font-size: 1.5rem;
-  border: none;
-  width: 33%;
-  height: auto;
-  padding: 0.5rem;
-  cursor: pointer;
-}
-
-.tabs-wrapper__tab--active {
-  background-color: var(--white-color);
-}
-
-.tabs-wrapper__description {
+.tabs__description {
   background-color: var(--secondary-color);
   font-size: 2rem;
   padding: 0.5rem;
@@ -110,15 +89,11 @@
     margin-top: 2rem;
   }
 
-  .tabs-wrapper__list {
+  .tabs__list {
     height: 15%;
   }
 
-  .tabs-wrapper__tab {
-    height: 100%;
-  }
-
-  .tabs-wrapper__description {
+  .tabs__description {
     height: 85%;
   }
 }
